RESOLVED FIXED131413
Don't call CGPathAddPath with invalid CGAffineTransform objects
https://bugs.webkit.org/show_bug.cgi?id=131413
Summary Don't call CGPathAddPath with invalid CGAffineTransform objects
Anders Carlsson
Reported 2014-04-08 18:05:54 PDT
Don't call CGPathAddPath with invalid CGAffineTransform objects
Attachments
Anders Carlsson
Comment 1 2014-04-08 18:11:38 PDT
Note You need to log in before you can comment on or make changes to this bug.