Don't call CGPathAddPath with invalid CGAffineTransform objects https://bugs.webkit.org/show_bug.cgi?id=131413 <rdar://problem/16399645>

Reviewed by Darin Adler.

Covered by existing tests.

* platform/graphics/cg/PathCG.cpp:
(WebCore::Path::addPath):
Don't try to add the path if the affine transform isn't invertible.

* platform/graphics/transforms/AffineTransform.cpp:
(WebCore::AffineTransform::isInvertible):
Handle infinite and NaN determinants.

(WebCore::AffineTransform::inverse):
Handle infinite and NaN determinants.

Canonical link: https://commits.webkit.org/149474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166989 268f45cc-cd09-0410-ab3c-d52691b4dbfc